--- a/lib/sudoku_web/templates/page/index.html.heex
+++ b/lib/sudoku_web/templates/page/index.html.heex
@@ -17,129 +17,129 @@
     </div>
     <% end %>
 
-    <h1 class="text-5xl text-center mx-auto mb-8"> Sudoku </h1>
-    <table id="sudoku" class="max-w-screen-sm mx-auto">
-        <colgroup class="border-solid border-4 border-black">
-            <col>
-            <col>
-            <col>
-        </colgroup>
-        <colgroup class="border-solid border-4 border-black">
-            <col>
-            <col>
-            <col>
-        </colgroup>
-        <colgroup class="border-solid border-4 border-black">
-            <col>
-            <col>
-            <col>
-        </colgroup>
-        <tbody class="border-solid border-4 border-black">
-            <tr>
-                <td><input type="text" maxlength="1"></td>
-                <td><input type="text" maxlength="1"></td>
-                <td><input type="text" maxlength="1"></td>
-                <td><input type="text" maxlength="1"></td>
-                <td><input type="text" maxlength="1"></td>
-                <td><input type="text" maxlength="1"></td>
-                <td><input type="text" maxlength="1"></td>
-                <td><input type="text" maxlength="1"></td>
-                <td><input type="text" maxlength="1"></td>
-            </tr>
-            <tr>
-                <td><input type="text" maxlength="1"></td>
-                <td><input type="text" maxlength="1"></td>
-                <td><input type="text" maxlength="1"></td>
-                <td><input type="text" maxlength="1"></td>
-                <td><input type="text" maxlength="1"></td>
-                <td><input type="text" maxlength="1"></td>
-                <td><input type="text" maxlength="1"></td>
-                <td><input type="text" maxlength="1"></td>
-                <td><input type="text" maxlength="1"></td>
-            </tr>
-            <tr>
-                <td><input type="text" maxlength="1"></td>
-                <td><input type="text" maxlength="1"></td>
-                <td><input type="text" maxlength="1"></td>
-                <td><input type="text" maxlength="1"></td>
-                <td><input type="text" maxlength="1"></td>
-                <td><input type="text" maxlength="1"></td>
-                <td><input type="text" maxlength="1"></td>
-                <td><input type="text" maxlength="1"></td>
-                <td><input type="text" maxlength="1"></td>
-            </tr>
-        </tbody>
-        <tbody class="border-solid border-4 border-black">
-            <tr>
-                <td><input type="text" maxlength="1"></td>
-                <td><input type="text" maxlength="1"></td>
-                <td><input type="text" maxlength="1"></td>
-                <td><input type="text" maxlength="1"></td>
-                <td><input type="text" maxlength="1"></td>
-                <td><input type="text" maxlength="1"></td>
-                <td><input type="text" maxlength="1"></td>
-                <td><input type="text" maxlength="1"></td>
-                <td><input type="text" maxlength="1"></td>
-            </tr>
-            <tr>
-                <td><input type="text" maxlength="1"></td>
-                <td><input type="text" maxlength="1"></td>
-                <td><input type="text" maxlength="1"></td>
-                <td><input type="text" maxlength="1"></td>
-                <td><input type="text" maxlength="1"></td>
-                <td><input type="text" maxlength="1"></td>
-                <td><input type="text" maxlength="1"></td>
-                <td><input type="text" maxlength="1"></td>
-                <td><input type="text" maxlength="1"></td>
-            </tr>
-            <tr>
-                <td><input type="text" maxlength="1"></td>
-                <td><input type="text" maxlength="1"></td>
-                <td><input type="text" maxlength="1"></td>
-                <td><input type="text" maxlength="1"></td>
-                <td><input type="text" maxlength="1"></td>
-                <td><input type="text" maxlength="1"></td>
-                <td><input type="text" maxlength="1"></td>
-                <td><input type="text" maxlength="1"></td>
-                <td><input type="text" maxlength="1"></td>
-            </tr>
-        </tbody>
-        <tbody class="border-solid border-4 border-black">
-            <tr>
-                <td><input type="text" maxlength="1"></td>
-                <td><input type="text" maxlength="1"></td>
-                <td><input type="text" maxlength="1"></td>
-                <td><input type="text" maxlength="1"></td>
-                <td><input type="text" maxlength="1"></td>
-                <td><input type="text" maxlength="1"></td>
-                <td><input type="text" maxlength="1"></td>
-                <td><input type="text" maxlength="1"></td>
-                <td><input type="text" maxlength="1"></td>
-            </tr>
-            <tr>
-                <td><input type="text" maxlength="1"></td>
-                <td><input type="text" maxlength="1"></td>
-                <td><input type="text" maxlength="1"></td>
-                <td><input type="text" maxlength="1"></td>
-                <td><input type="text" maxlength="1"></td>
-                <td><input type="text" maxlength="1"></td>
-                <td><input type="text" maxlength="1"></td>
-                <td><input type="text" maxlength="1"></td>
-                <td><input type="text" maxlength="1"></td>
-            </tr>
-            <tr>
-                <td><input type="text" maxlength="1"></td>
-                <td><input type="text" maxlength="1"></td>
-                <td><input type="text" maxlength="1"></td>
-                <td><input type="text" maxlength="1"></td>
-                <td><input type="text" maxlength="1"></td>
-                <td><input type="text" maxlength="1"></td>
-                <td><input type="text" maxlength="1"></td>
-                <td><input type="text" maxlength="1"></td>
-                <td><input type="text" maxlength="1"></td>
-            </tr>
-        </tbody>
-    </table>
+    <%# <h1 class="text-5xl text-center mx-auto mb-8"> Sudoku </h1> %>
+    <%# <table id="sudoku" class="max-w-screen-sm mx-auto"> %>
+    <%#     <colgroup class="border-solid border-4 border-black"> %>
+    <%#         <col> %>
+    <%#         <col> %>
+    <%#         <col> %>
+    <%#     </colgroup> %>
+    <%#     <colgroup class="border-solid border-4 border-black"> %>
+    <%#         <col> %>
+    <%#         <col> %>
+    <%#         <col> %>
+    <%#     </colgroup> %>
+    <%#     <colgroup class="border-solid border-4 border-black"> %>
+    <%#         <col> %>
+    <%#         <col> %>
+    <%#         <col> %>
+    <%#     </colgroup> %>
+    <%#     <tbody class="border-solid border-4 border-black"> %>
+    <%#         <tr> %>
+    <%#             <td><input type="text" maxlength="1"></td> %>
+    <%#             <td><input type="text" maxlength="1"></td> %>
+    <%#             <td><input type="text" maxlength="1"></td> %>
+    <%#             <td><input type="text" maxlength="1"></td> %>
+    <%#             <td><input type="text" maxlength="1"></td> %>
+    <%#             <td><input type="text" maxlength="1"></td> %>
+    <%#             <td><input type="text" maxlength="1"></td> %>
+    <%#             <td><input type="text" maxlength="1"></td> %>
+    <%#             <td><input type="text" maxlength="1"></td> %>
+    <%#         </tr> %>
+    <%#         <tr> %>
+    <%#             <td><input type="text" maxlength="1"></td> %>
+    <%#             <td><input type="text" maxlength="1"></td> %>
+    <%#             <td><input type="text" maxlength="1"></td> %>
+    <%#             <td><input type="text" maxlength="1"></td> %>
+    <%#             <td><input type="text" maxlength="1"></td> %>
+    <%#             <td><input type="text" maxlength="1"></td> %>
+    <%#             <td><input type="text" maxlength="1"></td> %>
+    <%#             <td><input type="text" maxlength="1"></td> %>
+    <%#             <td><input type="text" maxlength="1"></td> %>
+    <%#         </tr> %>
+    <%#         <tr> %>
+    <%#             <td><input type="text" maxlength="1"></td> %>
+    <%#             <td><input type="text" maxlength="1"></td> %>
+    <%#             <td><input type="text" maxlength="1"></td> %>
+    <%#             <td><input type="text" maxlength="1"></td> %>
+    <%#             <td><input type="text" maxlength="1"></td> %>
+    <%#             <td><input type="text" maxlength="1"></td> %>
+    <%#             <td><input type="text" maxlength="1"></td> %>
+    <%#             <td><input type="text" maxlength="1"></td> %>
+    <%#             <td><input type="text" maxlength="1"></td> %>
+    <%#         </tr> %>
+    <%#     </tbody> %>
+    <%#     <tbody class="border-solid border-4 border-black"> %>
+    <%#         <tr> %>
+    <%#             <td><input type="text" maxlength="1"></td> %>
+    <%#             <td><input type="text" maxlength="1"></td> %>
+    <%#             <td><input type="text" maxlength="1"></td> %>
+    <%#             <td><input type="text" maxlength="1"></td> %>
+    <%#             <td><input type="text" maxlength="1"></td> %>
+    <%#             <td><input type="text" maxlength="1"></td> %>
+    <%#             <td><input type="text" maxlength="1"></td> %>
+    <%#             <td><input type="text" maxlength="1"></td> %>
+    <%#             <td><input type="text" maxlength="1"></td> %>
+    <%#         </tr> %>
+    <%#         <tr> %>
+    <%#             <td><input type="text" maxlength="1"></td> %>
+    <%#             <td><input type="text" maxlength="1"></td> %>
+    <%#             <td><input type="text" maxlength="1"></td> %>
+    <%#             <td><input type="text" maxlength="1"></td> %>
+    <%#             <td><input type="text" maxlength="1"></td> %>
+    <%#             <td><input type="text" maxlength="1"></td> %>
+    <%#             <td><input type="text" maxlength="1"></td> %>
+    <%#             <td><input type="text" maxlength="1"></td> %>
+    <%#             <td><input type="text" maxlength="1"></td> %>
+    <%#         </tr> %>
+    <%#         <tr> %>
+    <%#             <td><input type="text" maxlength="1"></td> %>
+    <%#             <td><input type="text" maxlength="1"></td> %>
+    <%#             <td><input type="text" maxlength="1"></td> %>
+    <%#             <td><input type="text" maxlength="1"></td> %>
+    <%#             <td><input type="text" maxlength="1"></td> %>
+    <%#             <td><input type="text" maxlength="1"></td> %>
+    <%#             <td><input type="text" maxlength="1"></td> %>
+    <%#             <td><input type="text" maxlength="1"></td> %>
+    <%#             <td><input type="text" maxlength="1"></td> %>
+    <%#         </tr> %>
+    <%#     </tbody> %>
+    <%#     <tbody class="border-solid border-4 border-black"> %>
+    <%#         <tr> %>
+    <%#             <td><input type="text" maxlength="1"></td> %>
+    <%#             <td><input type="text" maxlength="1"></td> %>
+    <%#             <td><input type="text" maxlength="1"></td> %>
+    <%#             <td><input type="text" maxlength="1"></td> %>
+    <%#             <td><input type="text" maxlength="1"></td> %>
+    <%#             <td><input type="text" maxlength="1"></td> %>
+    <%#             <td><input type="text" maxlength="1"></td> %>
+    <%#             <td><input type="text" maxlength="1"></td> %>
+    <%#             <td><input type="text" maxlength="1"></td> %>
+    <%#         </tr> %>
+    <%#         <tr> %>
+    <%#             <td><input type="text" maxlength="1"></td> %>
+    <%#             <td><input type="text" maxlength="1"></td> %>
+    <%#             <td><input type="text" maxlength="1"></td> %>
+    <%#             <td><input type="text" maxlength="1"></td> %>
+    <%#             <td><input type="text" maxlength="1"></td> %>
+    <%#             <td><input type="text" maxlength="1"></td> %>
+    <%#             <td><input type="text" maxlength="1"></td> %>
+    <%#             <td><input type="text" maxlength="1"></td> %>
+    <%#             <td><input type="text" maxlength="1"></td> %>
+    <%#         </tr> %>
+    <%#         <tr> %>
+    <%#             <td><input type="text" maxlength="1"></td> %>
+    <%#             <td><input type="text" maxlength="1"></td> %>
+    <%#             <td><input type="text" maxlength="1"></td> %>
+    <%#             <td><input type="text" maxlength="1"></td> %>
+    <%#             <td><input type="text" maxlength="1"></td> %>
+    <%#             <td><input type="text" maxlength="1"></td> %>
+    <%#             <td><input type="text" maxlength="1"></td> %>
+    <%#             <td><input type="text" maxlength="1"></td> %>
+    <%#             <td><input type="text" maxlength="1"></td> %>
+    <%#         </tr> %>
+    <%#     </tbody> %>
+    <%# </table> %>
 
 </div>
 
